# hot-reload

./: .gitignore  greet.c  load.c  main.c  tls-dtor-fallback.s  woops.c
common/src/: lib.rs
compromise/: Cargo.toml
compromise/src/: lib.rs  linux.rs
greet-rs/: Cargo.toml  build.rs
greet-rs/src/: main.rs  plugin.rs
libgreet-rs/: Cargo.toml
libgreet-rs/src/: lib.rs
