[package]
name = "greet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
common = { version = "0.1.0", path = "../common" }
compromise = { version = "0.1.0", path = "../compromise" }
libloading = "0.8.3"
minifb = "0.25.0"
notify = "6.1.1"
